<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/dark_green">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_with_text"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupBtn"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button1"
            android:paddingStart="28dp"
            android:paddingEnd="9dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="@string/s_i_g_n_u_p"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/uploadimageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="230dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            app:cardCornerRadius="65dp"
            app:cardElevation="40dp">

            <ImageView
                android:id="@+id/profileImgView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription">

            </ImageView>
        </androidx.cardview.widget.CardView>



    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="333dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:paddingHorizontal="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="10dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="true"
            android:layout_marginTop="400dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/usernameLayout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="333dp"
        android:layout_height="65dp"
        android:layout_below="@id/nameLayout"
        android:layout_marginHorizontal="20dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:paddingHorizontal="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="true"
            android:layout_marginTop="400dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/passwordLayout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="333dp"
        android:layout_height="65dp"
        android:layout_below="@id/usernameLayout"
        android:layout_marginHorizontal="20dp"
        app:endIconMode="password_toggle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:paddingHorizontal="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="true"
            android:layout_marginTop="400dp"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>



</RelativeLayout>



