<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInActivity"
    android:background="@color/dark_green">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        tools:ignore="ContentDescription" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="160dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button1"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="L  O  G  I  N"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_signup"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:id="@+id/usernameLayout"
        android:layout_width="333dp"
        android:layout_height="78dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:paddingHorizontal="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:drawablePadding="10dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="true"
            android:layout_marginTop="400dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="333dp"
        android:layout_height="78dp"
        android:layout_below="@id/usernameLayout"
        android:layout_marginHorizontal="20dp"

        android:layout_centerHorizontal="true"
        app:endIconMode="password_toggle"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:paddingHorizontal="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="true"
            android:layout_marginTop="400dp"
            android:inputType="textPassword"
            />


    </com.google.android.material.textfield.TextInputLayout>



    </RelativeLayout>



